[package]
name = "cf-dyndns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cloudflare = "0.10.1"
futures = "0.3.28"
once_cell = "1.18.0"
reqwest = "0.11.19"
serde = "1.0.185"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt"] }
